k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storyslip-production
  labels:
    name: storyslip-production
    environment: production
    app: storyslip
